Enhanced the look and feel

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="topnav" >
   <div class="logo">
   	<img src="j_logo.jpg" alt="Jarvus Logo" width="7%">
-  	<span class="title">Jarvus</span>
+  	<span class="title">Just Another Rather Very Usable System</span>
   </div>
   <div class="search-container">
     <input type="text" ng-model="selectedApplication" uib-typeahead="name for name in names | filter:$viewValue" class="form-control" placeholder="Search Application" ng-keydown="checkForEnterKey($event ,selectedApplication)"> 
